# facebook-wda

./: .gitignore  .travis.yml  ABOUT.rst  AUTHORS  CHANGELOG  DESIGN.md  DEVELOP.md  README.md  pytest_output.md  requirements.txt  runtest.sh  setup.cfg
.developer/: dev.sh
.github/workflows/: publish_to_pypi.yml  python-app.yml  release.yml
e2e_benchmarks/: README.md  constant.py  requirement.txt  test_alert_commands.py  test_custom_commands.py  test_debug_commands.py  test_element_commands.py  test_find_element_commands.py  test_orientation_commands.py  test_screenshot_commands.py  test_session_commands.py
e2e_benchmarks/app/facebookwdae2e/facebookwdae2e/: ContentView.swift
e2e_benchmarks/app/facebookwdae2e/facebookwdae2e.xcodeproj/: project.pbxproj
e2e_benchmarks/facebookwdae2e/facebookwdae2e/: ContentView.swift  DragView.swift  ListView.swift  facebookwdae2eApp.swift
e2e_benchmarks/facebookwdae2e/facebookwdae2eUITests/: facebookwdae2eUITests.swift  facebookwdae2eUITestsLaunchTests.swift
e2e_benchmarks/reports/: WDA_V611.md  WDA_V711.md
examples/: full_example.py
examples/com.netease.cloudmusic/: README.txt  test_discover_music.py
examples/com.netease.cloudmusic-pytest/: test_discover_music.py
tests/: conftest.py  test_callback.py  test_client.py  test_common.py  test_element.py  test_session.py  test_swipe.py  test_xpath.py
wda/: __init__.py  _proto.py  exceptions.py  requests_usbmux.py  usbmux.py  utils.py  w3c_actions.py  xcui_element_types.py
wda/usbmux/: __init__.py  exceptions.py  pyusbmux.py
(+6 files in other folders)
