[metadata]
name = facebook-wda
author = "codeskyblue"
summary = Python Client for Facebook WebDriverAgent
license = MIT
description-file = ABOUT.rst
home-page = https://github.com/openatx/facebook-wda
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	wda
